--- a/contrib/gitian-descriptors/README
+++ b/contrib/gitian-descriptors/README
@@ -47,3 +47,7 @@ Here's a description of Gavin's setup on OSX 10.6:
   export USE_LXC=1
   git clone git://github.com/bitcoin/bitcoin.git
   ... etc
+
+
+  cp $OUTDIR/src/doc/README_windows.txt $OUTDIR/readme.txt
+line 38 gitian win 32.yml.  
